# advent-of-code

./: .gitignore
2018/: README.md
2018/01/: lib.hs
2019/: README.md  meson.build  requirements.in  requirements.txt  setup.cfg
2019/src/: Makefile  day01.f90  day02.f90  types.f90
2019/src/advent19/: sol01.py  sol02.py
2019/tests/: test01.py  test02.py
2020/: Cargo.toml  README.md
2020/src/: day1.rs  day2.rs  day3.rs  lib.rs  main.rs
